# pubg_anomaly_detection

./: .gitignore  README.md  pyproject.toml
code/: Anomaly_detection.ipynb
